namespaces/eng/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: eng
  labels:
    app: eng
  annotations:
    configmanagement.gke.io/cluster-selector: selector-acm-1
