namespaces/eng/namespace_copy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: eng
  labels:
    app: eng
  annotations:
    configmanagement.gke.io/cluster-selector: acm-2
